--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: Pixel on Kaspa
+title: "Pixel on Kaspa"
 
 # Your name to show in the footer
-author: PIXEL
+author: "PIXEL"
 
 ###############################################
 # --- List of links in the navigation bar --- #
