--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: "Pixel on Kaspa"
+title: "Pixel-on-Kaspa"
 
 # Your name to show in the footer
 author: "PIXEL"
@@ -22,8 +22,6 @@ author: "PIXEL"
 navbar-links:
   About Pixel: "aboutme"
   Resources:
-    - NFT: ""
-    - What is Kaspa: ""
 
 ################
 # --- Logo --- #
