--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ social-network-links:
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
-#  telegram: yourname
+  telegram: "t.me/+Ro2t1MjZunIxM2M8"
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  bluesky: yourname
